feat: implement the first phase