@@ -11,10 +11,10 @@ WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 ENV JAVA_OPTS="-XX:+UseZGC \
-                             -XX:MaxRAMPercentage=75 \
-                             -XX:InitialRAMPercentage=40 \
-                             -XX:+UseStringDeduplication \
-                             -Xss256k \
-                             -XX:TieredStopAtLevel=1 \
-                             -Djava.security.egd=file:/dev/./urandom"
+               -XX:MaxRAMPercentage=75 \
+               -XX:InitialRAMPercentage=50 \
+               -XX:+UseStringDeduplication \
+               -Xss256k \
+               --enable-preview \
+               -Djava.security.egd=file:/dev/./urandom"
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
